--- a/index.css
+++ b/index.css
@@ -59,6 +59,15 @@ a {
     font-size: 30px;
 }
 
+.activity-title:not(:first-child) {
+    margin-top: 100px;
+    font-size: 25px;
+}
+
+.activity-title {
+    font-size: 25px;
+}
+
 .aboutme-text {
     margin: 20px;
     width: fit-content;
@@ -124,5 +133,10 @@ a {
         position: relative;
         width: 100%;
         margin: 0 auto;
+    }
+
+    .latestVideoEmbed {
+        width: 384px;
+        height: 216px;
     }
 }
