--- a/index.css
+++ b/index.css
@@ -62,6 +62,7 @@ a {
 
 .aboutme-title {
     font-size: 30px;
+    color: #5e33ff;
 }
 
 .activity-title:not(:first-child) {
@@ -71,6 +72,7 @@ a {
 
 .activity-title {
     font-size: 25px;
+    color: #5e33ff;
 }
 
 .aboutme-text {
