--- a/index.css
+++ b/index.css
@@ -1,154 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;800&display=swap");
 
-::-webkit-scrollbar {
-    width: 7px
-}
-
-::-webkit-scrollbar-track {
-    background: #303235
-}
-
-::-webkit-scrollbar-thumb {
-    background: #4f555e;
-    border-radius: 15px
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #474a52
+:root {
+  --color-primary: #91a1d9;
+  --color-secondary: #cdcdff;
+  --color-background: #22293e;
 }
 
 body {
-    background-color: #201f1f;
-    font-family: 'Fira Code', monospace;
-    font-size: 13px;
-    color: #fff;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    overflow-z: hidden;
+  background-color: var(--color-background);
+  color: var(--color-primary);
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  text-align: center;
 }
 
-a {
-    cursor: pointer;
-    font-size: 15px;
+.content {
+  margin: 20px 20px;
 }
 
-.pazdikan-tab {
-    display: none;
-    opacity: 0;
-    position: relative;
-    width: 80%;
-    margin: 25px auto;
+.title {
+  font-weight: 800;
+  font-size: 69px;
+  margin-top: 300px;
+
+  animation: fadeInDownBig 1s;
 }
 
-.pazdikan-active {
-    display: block;
-    -webkit-animation: tab-fadein 1s forwards .5s;
-    animation: tab-fadein 1s forwards .5s;
+.small-title {
+  font-weight: 800;
+  font-size: 30px;
+  text-align: center;
 }
 
-.aboutme {
-    position: relative;
-    width: 80%;
-    margin: 0 auto;
+.name {
+  color: var(--color-secondary);
 }
 
-.aboutme:not(:first-child) {
-    padding-top: 50px;
+.shortabout {
+  opacity: 0;
 }
 
-.aboutme-title {
-    font-size: 30px;
-    color: #5e33ff;
+#about {
+  margin-top: 500px;
+  margin-bottom: 100px;
 }
 
-.activity-title:not(:first-child) {
-    padding-top: 100px;
-    font-size: 25px;
+.about {
+  border: var(--color-primary) solid 3px;
+  border-radius: 10px;
+  padding: 15px;
+  width: 500px;
+  margin: 0 auto;
+  text-align: justify;
 }
 
-.activity-title {
-    font-size: 25px;
-    color: #5e33ff;
+.about-l {
+  opacity: 0;
+  margin-left: 250px;
+  margin-top: 50px;
 }
 
-.aboutme-text {
-    margin: 20px;
-    width: fit-content;
-    text-align: justify;
-}
-
-.navbar {
-    -webkit-animation: navbar-slidein 1s forwards;
-    animation: navbar-slidein 1s forwards;
-}
-
-.titleHeart {
-    position: relative;
-    -webkit-animation: heartHover 1s infinite;
-    animation: heartHover 1s infinite;
-}
-
-.spotify {
-    width: 80%;
-}
-
-.spotifyComment {
-    color: #4c9e48;
-    text-align: center;
-}
-
-.navbar-nav > li > .dropdown-menu { background-color: #4a24d7; }
-.navbar-nav > li > .dropdown-menu a:hover { background-color: #4827cb; }
-.navbar-nav > li > .dropdown-menu a{   color: #fff;  }
-
-@keyframes navbar-slidein {
-    from {
-        margin-top: -75px;
-    }
-
-    to {
-        margin-top: 0%;
-    }
-}
-
-@keyframes tab-fadein {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 100%;
-    }
-}
-
-@keyframes heartHover {
-    0% {top: 0}
-    15% {top: -2px}
-    20% {top: -3px}
-    25% {top: -6px}
-    75% {top: -6px}
-    80% {top: -3px}
-    85% {top: -2px}
-    100% {top: 0}
-}
-
-@media only screen and (max-width: 768px) {
-    .spotify {
-        width: 100%;
-    }
-
-    .aboutme {
-        position: relative;
-        width: 100%;
-        margin: 0 auto;
-    }
-
-    .latestVideoEmbed {
-        width: 384px;
-        height: 216px;
-    }
+.about-r {
+  opacity: 0;
+  margin-right: 250px;
+  margin-top: 50px;
 }
