--- a/index.css
+++ b/index.css
@@ -12,24 +12,41 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: 500;
   text-align: center;
+  overflow-x: hidden;
 }
 
 .content {
   margin: 20px 20px;
 }
 
+.socials {
+  font-weight: 800;
+  font-size: 30px;
+  width: fit-content;
+  margin: auto;
+  margin-top: 250px;
+  opacity: 0;
+}
+
 .title {
   font-weight: 800;
   font-size: 69px;
-  margin-top: 300px;
 
   animation: fadeInDownBig 1s;
 }
 
 .small-title {
+  color: var(--color-secondary);
   font-weight: 800;
   font-size: 30px;
-  text-align: center;
+}
+
+.about-l .small-title {
+  text-align: left;
+}
+
+.about-r .small-title {
+  text-align: right;
 }
 
 .name {
@@ -41,27 +58,120 @@ body {
 }
 
 #about {
-  margin-top: 500px;
-  margin-bottom: 100px;
+  margin-top: 375px;
 }
 
 .about {
-  border: var(--color-primary) solid 3px;
+  /* background-color: var(--color-primary); */
   border-radius: 10px;
   padding: 15px;
   width: 500px;
   margin: 0 auto;
   text-align: justify;
+  margin-bottom: 100px;
 }
 
 .about-l {
+  border-left: var(--color-primary) solid 4px;
   opacity: 0;
   margin-left: 250px;
   margin-top: 50px;
 }
 
 .about-r {
+  border-right: var(--color-primary) solid 4px;
   opacity: 0;
   margin-right: 250px;
   margin-top: 50px;
+}
+
+.fa-arrow-down {
+  margin-top: 100px;
+  font-size: 69px;
+}
+
+i {
+  color: var(--color-secondary);
+}
+
+a {
+  text-decoration: none;
+}
+
+a:link {
+  color: var(--color-secondary);
+}
+
+a:visited {
+  color: var(--color-secondary);
+}
+
+a:hover {
+  color: var(--color-primary);
+}
+
+a:active {
+  color: var(--color-secondary);
+}
+
+i {
+  padding: 5px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  opacity: 0;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--color-secondary);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+@media screen and (max-width: 800px) {
+  .title {
+    font-size: 40px;
+  }
+
+  #about {
+    margin-top: 200px;
+  }
+
+  .about {
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 100px;
+  }
+
+  .about-l {
+    margin-left: 0;
+    margin-top: 0;
+  }
+
+  .about-r {
+    margin-right: 0;
+    margin-top: 0;
+  }
+
+  .fa-arrow-down {
+    margin-top: 20px;
+  }
+}
+
+iframe {
+  height: 250px;
+  margin-bottom: 50px;
+}
+
+iframe:last-child {
+  margin-bottom: 0;
 }
